# healthcheck_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/app/handlers/: messages.py
src/app/service/: healthchecker.py
src/app/service/dispensary/: healthcheck.py
src/app/service/edocument/: healthcheck.py
src/app/service/edocument_v2/: healthcheck.py
src/app/service/face2face/: healthcheck.py
src/app/service/liveness/: healthcheck.py
src/settings/: config.py
